@@ -45,13 +45,20 @@ href="http://lilypond-design.com/sponsor/">...Read more...</a> </div>
 <h2>
 Just <em>enjoying LilyPond</em>?  </h2>
 
-
 Pitch in a donation!  We suggest an amount of
  EUR 25.  Send it via
 
 <blockquote>
-<a href="http://www.paypal.com">PayPal</a> 
- </blockquote>
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+<input type="hidden" name="cmd" value="_xclick"/>
+<input type="hidden" name="business" value="hanwen@xs4all.nl"/>
+<input type="hidden" name="item_name" value="LilyPond Sponsoring"/>
+<input type="hidden" name="currency_code" value="EUR">
+<input type="hidden" name="item_number" value="2002"/>
+<input type="image"
+src="http://images.paypal.com/images/x-click-but02.gif" name="submit" alt="Make payments with PayPal - it's fast, free and secure!"/>
+</form>
+</blockquote>
  to
 <blockquote>
 <tt>hanwen@xs4all.nl</tt>
