@@ -1,5 +1,7 @@
 2005-11-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* site/sponsor/options.html: add paypal logo.
+
 	* site/about/index.html (href): image credits.
 
 	* site/about/faq.html: remove "how to thank question"
